crates/loi-output/src/snapshots/loi_output__pretty__tests__pretty_openat_basic.snap
---
source: crates/loi-output/src/pretty.rs
expression: line
---
[1234] openat(AT_FDCWD, "/etc/hosts", O_RDONLY|O_CLOEXEC, 0o0) = 3 <12us>
